Add better field validation and annotations